// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly call onDone and onClose after submit 1`] = `
<Modal
  contentLabel="webhooks.update"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        webhooks.update
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <ModalValidationField
        label={
          <label
            htmlFor="webhook-name"
          >
            webhooks.name
            <em
              className="mandatory"
            >
              *
            </em>
          </label>
        }
        onChange={[Function]}
        value="foo"
      />
      <ModalValidationField
        description="webhooks.url.description"
        label={
          <label
            htmlFor="webhook-url"
          >
            webhooks.url
            <em
              className="mandatory"
            >
              *
            </em>
          </label>
        }
        onChange={[Function]}
        value="http://foo.bar"
      />
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={true}
        timeout={100}
      />
      <button
        disabled={true}
        type="submit"
      >
        update_verb
      </button>
      <button
        className="button-link"
        disabled={true}
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly when creating a new webhook 1`] = `
<Modal
  contentLabel="webhooks.create"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        webhooks.create
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <ModalValidationField
        error="webhooks.name.required"
        label={
          <label
            htmlFor="webhook-name"
          >
            webhooks.name
            <em
              className="mandatory"
            >
              *
            </em>
          </label>
        }
        onChange={[Function]}
        value=""
      />
      <ModalValidationField
        description="webhooks.url.description"
        error="webhooks.url.required"
        label={
          <label
            htmlFor="webhook-url"
          >
            webhooks.url
            <em
              className="mandatory"
            >
              *
            </em>
          </label>
        }
        onChange={[Function]}
        value=""
      />
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <button
        disabled={true}
        type="submit"
      >
        create
      </button>
      <button
        className="button-link"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly when updating a webhook 1`] = `
<Modal
  contentLabel="webhooks.update"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        webhooks.update
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <ModalValidationField
        label={
          <label
            htmlFor="webhook-name"
          >
            webhooks.name
            <em
              className="mandatory"
            >
              *
            </em>
          </label>
        }
        onChange={[Function]}
        value="foo"
      />
      <ModalValidationField
        description="webhooks.url.description"
        label={
          <label
            htmlFor="webhook-url"
          >
            webhooks.url
            <em
              className="mandatory"
            >
              *
            </em>
          </label>
        }
        onChange={[Function]}
        value="http://foo.bar"
      />
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <button
        disabled={false}
        type="submit"
      >
        update_verb
      </button>
      <button
        className="button-link"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;
